# OOPClasses

TP/: Buffer.cpp  CMakeLists.txt  Caravana.cpp  Cidade.cpp  GameData.cpp  Item.cpp  Player.cpp  comandos.txt  main.cpp  mapManager.cpp  mapa.txt
TP/headers/: Buffer.h  Caravana.h  Cidade.h  GameData.h  Item.h  Player.h  mapManager.h
